src/uEnergyHost/uEnergyHost.h


typedef struct _CSR_BLE_TRANSPORT {
    BYTE                        transportType;          
    BYTE                    usbDeviceNumber;            
    DWORD                   serialBaudRate;             
    DWORD                   serialResetBaudRate;        
    BYTE                    serialComPort;              
} CSR_BLE_TRANSPORT;
typedef CSR_BLE_TRANSPORT *PCSR_BLE_TRANSPORT;
typedef struct _CSR_BLE_BLUETOOTH_ADDRESS {
    BYTE                        type;  
    WORD                        nAp;   
    BYTE                        uAp;   
    DWORD                       lAp;   
} CSR_BLE_BLUETOOTH_ADDRESS;
typedef struct _CSR_BLE_UUID {
    BYTE                lengthInBytes;                  
    WORD                uuid16;                         
    BYTE                uuid128[16];                    
} CSR_BLE_UUID;
typedef struct _CSR_BLE_PAIRED_DEVICE {
    CSR_BLE_BLUETOOTH_ADDRESS   deviceAddress;
    CHAR                        deviceName[51];
    WORD                                appearance;
} CSR_BLE_PAIRED_DEVICE;
typedef CSR_BLE_PAIRED_DEVICE *PCSR_BLE_PAIRED_DEVICE;
typedef struct _CSR_BLE_DB_CHARACTERISTIC {
    CSR_BLE_UUID                uuid;                   
    BYTE                        properties;             
    WORD                        permission;             
    WORD                        flags;                  
    WORD                        handle;
    WORD                        clientCfgHandle;
    WORD                        length;                 
    LPVOID                      value;                  
} CSR_BLE_DB_CHARACTERISTIC, *PCSR_BLE_DB_CHARACTERISTIC;
typedef struct _CSR_BLE_DB_SERVICE {
    CSR_BLE_UUID                uuid;                   
    WORD                        handle;
    WORD                        nCharacteristics;       
    PCSR_BLE_DB_CHARACTERISTIC  characteristics;        
} CSR_BLE_DB_SERVICE, *PCSR_BLE_DB_SERVICE;
CSR_BLE_HOST_API UINT CsrBleHostInit(BOOL useLogging, LPCSTR logFilename,
                                     PCSR_BLE_TRANSPORT transport);
CSR_BLE_HOST_API BOOL CsrBleHostStart(DWORD threadId);
CSR_BLE_HOST_API BOOL CsrBleHostStartWnd(HWND hWnd);
CSR_BLE_HOST_API BOOL CsrBleHostDeinit(void);
CSR_BLE_HOST_API BOOL CsrBleHostStartDeviceSearch(DWORD searchTime);
CSR_BLE_HOST_API BOOL CsrBleHostStopDeviceSearch(void);
CSR_BLE_HOST_API BOOL CsrBleHostStartLEScan();
CSR_BLE_HOST_API BOOL CsrBleHostStopLESearch();
CSR_BLE_HOST_API BOOL CsrBleHostConnect(CSR_BLE_BLUETOOTH_ADDRESS address);
CSR_BLE_HOST_API BOOL CsrBleHostUseRandomAddress(BOOL useRandomAddress);
CSR_BLE_HOST_API BOOL CsrBleHostCancelConnect(void);
CSR_BLE_HOST_API BOOL CsrBleHostSetConnectionParams(WORD scanInterval,
    WORD scanWindow, WORD connMin, WORD connMax, WORD latency, WORD timeout);
CSR_BLE_HOST_API BOOL CsrBleHostUpdateConnectionParams(
    CSR_BLE_BLUETOOTH_ADDRESS address, WORD connMin, WORD connMax,
    WORD latency, WORD timeout, WORD minCeLength, WORD maxCeLength);
CSR_BLE_HOST_API BOOL CsrBleHostDisconnect(DWORD connectHandle);
CSR_BLE_HOST_API BOOL CsrBleHostGetPairedDeviceList(LPWORD nPairedDevices, PCSR_BLE_PAIRED_DEVICE* pairedDevices);
CSR_BLE_HOST_API BOOL CsrBleHostFreePairedDeviceList(PCSR_BLE_PAIRED_DEVICE pairedDevices);
CSR_BLE_HOST_API BOOL CsrBleHostUpdatePairedDeviceList(PCSR_BLE_PAIRED_DEVICE pairedDevice);
CSR_BLE_HOST_API BOOL CsrBleHostFreeMessageContents(WPARAM wParam, LPARAM lParam);
CSR_BLE_HOST_API BOOL CsrBleHostCancel();
CSR_BLE_HOST_API BOOL CsrBleHostGetBtBaseUuid(DWORD *pBase, int Length);
CSR_BLE_HOST_API BOOL CsrBleHostGetRssi(CSR_BLE_BLUETOOTH_ADDRESS address);
CSR_BLE_HOST_API BOOL CsrBleHostDebond(CSR_BLE_BLUETOOTH_ADDRESS device);
CSR_BLE_HOST_API BOOL CsrBleHostJustWorksResult(CSR_BLE_BLUETOOTH_ADDRESS device, BOOL accept, BOOL bond);
CSR_BLE_HOST_API BOOL CsrBleHostPasskeyNotificationResult(BOOL accept, CSR_BLE_BLUETOOTH_ADDRESS device);
CSR_BLE_HOST_API BOOL CsrBleHostSetEncryption(DWORD connectHandle, BYTE security);
CSR_BLE_HOST_API void CsrBleHostChangeSecurityLevel(BOOL mitmRequired);
CSR_BLE_HOST_API void CsrBleHostCancelBonding(CSR_BLE_BLUETOOTH_ADDRESS address);
CSR_BLE_HOST_API BOOL CsrBleHostAcceptConnUpdate(DWORD connectHandle, WORD id, BOOL accept);
CSR_BLE_HOST_API BOOL CsrBleClientDiscoverServices(DWORD connectHandle);
CSR_BLE_HOST_API BOOL CsrBleClientDiscoverCharacteristics(DWORD connectHandle, WORD startHandle, WORD endHandle);
CSR_BLE_HOST_API BOOL CsrBleClientDiscoverCharacteristicsByUuid(DWORD connectHandle, CSR_BLE_UUID uuid, WORD startHandle, WORD endHandle);
CSR_BLE_HOST_API BOOL CsrBleClientDiscoverCharacteristicDsc(DWORD connectHandle, WORD startHandle, WORD endHandle);
CSR_BLE_HOST_API BOOL CsrBleClientDiscoverDatabase(DWORD connectHandle);
CSR_BLE_HOST_API BOOL CsrBleClientReadCharByHandle(DWORD connectHandle, WORD charHandle);
CSR_BLE_HOST_API BOOL CsrBleClientReadCharsByHandles(DWORD connectHandle, WORD userTag, int nHandles, WORD* charHandle);
CSR_BLE_HOST_API BOOL CsrBleClientReadCharByUuid(DWORD connectHandle, CSR_BLE_UUID uuid, WORD startHandle, WORD endHandle);
CSR_BLE_HOST_API BOOL CsrBleClientWriteCharByHandle(DWORD connectHandle, BOOL isSigned, WORD charHandle, WORD valueSize, LPVOID value);
CSR_BLE_HOST_API BOOL CsrBleClientWriteCfmCharByHandle(DWORD connectHandle, WORD charHandle, WORD offset, WORD valueSize, LPVOID value);
CSR_BLE_HOST_API BOOL CsrBleClientWriteConfiguration(DWORD connectHandle, WORD charDscHandle, WORD charHandle, BYTE config);
CSR_BLE_HOST_API BOOL CsrBleServerAllocDatabase(WORD nHandles);
CSR_BLE_HOST_API BOOL CsrBleServerAddDatabase(WORD startHandle, WORD nServices, PCSR_BLE_DB_SERVICE services);
CSR_BLE_HOST_API BOOL CsrBleServerReadResponse(DWORD connectHandle, WORD handle, WORD response, WORD length, LPVOID value);
CSR_BLE_HOST_API BOOL CsrBleServerWriteResponse(DWORD connectHandle, WORD handle, WORD response);
CSR_BLE_HOST_API BOOL CsrBleServerSendNotification(DWORD connectHandle, WORD handle, WORD length, LPVOID value);
CSR_BLE_HOST_API BOOL CsrBleServerSendIndication(DWORD connectHandle, WORD handle, WORD length, LPVOID value);